upadte projects and add about me

--- a/public/404.html
+++ b/public/404.html
@@ -5,17 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/Images/Icon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site of shai's porfolio"
-    />
+    <meta name="description" content="Web site of shai's porfolio" />
     <meta propert="og:site_name" content="Shai's profolio"/>
     <meta propert="og:url" content=""/>
     <meta propert="og:title" content="Shai's Profolio"/>
     <meta propert="og:image" content="./favicon.ico"/>
     <meta propert="og:description" content="Look at Shai's protfolio"/>
     <meta name="twitter:site" content="Shai's profolio" />
-
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Images/Icon/logo192.png" />
   
@@ -25,6 +21,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" ></div>
+    <div id="404" ></div>
   </body>
 </html>
