change logo and add icons to about page

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Images/Icon/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/Images/Logo/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Images/Logo/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Images/Logo/logo192.png" />  
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site of shai's porfolio"
@@ -15,11 +17,6 @@
     <meta propert="og:image" content="./favicon.ico"/>
     <meta propert="og:description" content="Look at Shai's protfolio"/>
     <meta name="twitter:site" content="Shai's profolio" />
-
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Images/Icon/logo192.png" />
-  
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Shai's porfolio</title>
   </head>
